# sourceview5-rs

./: Cargo.toml  Dockerfile  Makefile  README.md  crates.js  search-index.js  settings.html  source-files.js  update_image.sh
demo/: Cargo.toml
demo/src/: main.rs
sourceview5/: Cargo.toml  Gir.toml  all.html  constant.NONE_BUFFER.html  constant.NONE_COMPLETION.html  constant.NONE_COMPLETION_CELL.html  constant.NONE_COMPLETION_CONTEXT.html  constant.NONE_COMPLETION_PROPOSAL.html  constant.NONE_COMPLETION_PROVIDER.html  constant.NONE_COMPLETION_SNIPPETS.html  constant.NONE_COMPLETION_WORDS.html  constant.NONE_FILE.html  constant.NONE_FILE_LOADER.html  constant.NONE_FILE_SAVER.html  constant.NONE_GUTTER.html  constant.NONE_GUTTER_LINES.html  constant.NONE_GUTTER_RENDERER.html  constant.NONE_GUTTER_RENDERER_PIXBUF.html  constant.NONE_GUTTER_RENDERER_TEXT.html  constant.NONE_HOVER_PROVIDER.html  constant.NONE_INDENTER.html  constant.NONE_LANGUAGE.html  constant.NONE_LANGUAGE_MANAGER.html  constant.NONE_MAP.html  constant.NONE_MARK.html  constant.NONE_MARK_ATTRIBUTES.html  constant.NONE_PRINT_COMPOSITOR.html  constant.NONE_REGION.html  constant.NONE_SEARCH_CONTEXT.html  constant.NONE_SEARCH_SETTINGS.html  constant.NONE_SNIPPET.html  constant.NONE_SNIPPET_CHUNK.html  constant.NONE_SNIPPET_CONTEXT.html  constant.NONE_SNIPPET_MANAGER.html  constant.NONE_SPACE_DRAWER.html  constant.NONE_STYLE.html  constant.NONE_STYLE_SCHEME.html  constant.NONE_STYLE_SCHEME_CHOOSER.html  constant.NONE_STYLE_SCHEME_CHOOSER_BUTTON.html  constant.NONE_STYLE_SCHEME_CHOOSER_WIDGET.html  (+173 more)
sourceview5-sys/: Cargo.toml  Gir.toml  build.rs
sourceview5-sys/src/: lib.rs
sourceview5-sys/tests/: abi.rs  constant.c  layout.c
sourceview5/auto/buffer/: constant.NONE_BUFFER.html  struct.Buffer.html  struct.BufferBuilder.html  struct.BufferClass.html  trait.BufferExt.html
sourceview5/auto/completion/: constant.NONE_COMPLETION.html  struct.Completion.html  struct.CompletionBuilder.html  struct.CompletionClass.html  trait.CompletionExt.html
sourceview5/auto/completion_cell/: constant.NONE_COMPLETION_CELL.html  struct.CompletionCell.html  struct.CompletionCellBuilder.html  struct.CompletionCellClass.html  trait.CompletionCellExt.html
sourceview5/auto/completion_context/: constant.NONE_COMPLETION_CONTEXT.html  struct.CompletionContext.html  struct.CompletionContextBuilder.html  struct.CompletionContextClass.html  trait.CompletionContextExt.html
sourceview5/auto/completion_proposal/: constant.NONE_COMPLETION_PROPOSAL.html  struct.CompletionProposal.html  trait.CompletionProposalExt.html
sourceview5/auto/completion_provider/: constant.NONE_COMPLETION_PROVIDER.html  struct.CompletionProvider.html  (+1 more)
sourceview5/gutter_lines/: trait.GutterLinesManualExt.html
sourceview5/prelude/: index.html  sidebar-items.js  trait.BufferExt.html  trait.CompletionCellExt.html  trait.CompletionContextExt.html  trait.CompletionExt.html  trait.CompletionProposalExt.html  trait.CompletionProviderExt.html  trait.CompletionSnippetsExt.html  trait.CompletionWordsExt.html  trait.FileExt.html  trait.FileLoaderExt.html  trait.FileSaverExt.html  trait.GutterExt.html  trait.GutterLinesExt.html  trait.GutterLinesManualExt.html  trait.GutterRendererExt.html  trait.GutterRendererPixbufExt.html  trait.GutterRendererTextExt.html  trait.HoverProviderExt.html  trait.IndenterExt.html  trait.LanguageExt.html  trait.LanguageManagerExt.html  trait.MapExt.html  trait.MarkAttributesExt.html  trait.MarkExt.html  trait.PrintCompositorExt.html  trait.RegionExt.html  trait.SearchContextExt.html  trait.SearchSettingsExt.html  trait.SnippetChunkExt.html  trait.SnippetContextExt.html  trait.SnippetExt.html  trait.SnippetManagerExt.html  trait.SpaceDrawerExt.html  trait.StyleExt.html  trait.StyleSchemeChooserExt.html  trait.StyleSchemeExt.html  trait.StyleSchemeManagerExt.html  trait.TagExt.html  (+2 more)
sourceview5/src/: gutter_lines.rs  lib.rs  prelude.rs  view.rs
sourceview5/sys/: Cargo.toml  Gir.toml  build.rs
sourceview5/traits/: trait.BufferExt.html  trait.CompletionCellExt.html  trait.CompletionContextExt.html  trait.CompletionExt.html  trait.CompletionProposalExt.html  trait.CompletionProviderExt.html  trait.CompletionSnippetsExt.html  trait.CompletionWordsExt.html  trait.FileExt.html  trait.FileLoaderExt.html  trait.FileSaverExt.html  trait.GutterExt.html  trait.GutterLinesExt.html  trait.GutterRendererExt.html  trait.GutterRendererPixbufExt.html  trait.GutterRendererTextExt.html  trait.HoverProviderExt.html  trait.IndenterExt.html  trait.LanguageExt.html  trait.LanguageManagerExt.html  trait.MapExt.html  trait.MarkAttributesExt.html  trait.MarkExt.html  trait.PrintCompositorExt.html  trait.RegionExt.html  trait.SearchContextExt.html  trait.SearchSettingsExt.html  trait.SnippetChunkExt.html  trait.SnippetContextExt.html  trait.SnippetExt.html  trait.SnippetManagerExt.html  trait.SpaceDrawerExt.html  trait.StyleExt.html  trait.StyleSchemeChooserExt.html  trait.StyleSchemeExt.html  trait.StyleSchemeManagerExt.html  trait.TagExt.html  trait.ViewExt.html
sourceview5/view/: trait.ViewManualExt.html
(+981 files in other folders)
