[package]
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2018"
name = "demo"
version = "0.1.0"

[dependencies.gtk]
branch = "bilelmoussaoui/update"
git = "https://github.com/bilelmoussaoui/gtk4"
package = "gtk4"

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"


[dependencies.sourceview5]
path = "../sourceview5"
