[package]
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
build = "build.rs"
edition = "2015"
name = "sourceview5-sys"
version = "0.1.0"
documentation = "https://bilelmoussaoui.github.io/sourceview5-rs/sourceview5_sys/"
repository = "https://github.com/bilelmoussaoui/sourceview5-rs/"
[package.metadata.system-deps.gtksourceview_5]
name = "gtksourceview-5"
version = "4.90"

[package.metadata.system-deps.gtksourceview_5.feature-versions]
v5_0 = "4.90"
[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.pango]
git = "https://github.com/gtk-rs/pango"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gdk-pixbuf-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/sys"
package = "gtk4-sys"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/sys"
package = "gdk4-sys"

[build-dependencies]
system-deps = "1.3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
v5_0 = []
