[package]
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2015"
name = "sourceview5"
version = "0.1.0"
documentation = "https://bilelmoussaoui.github.io/sourceview5-rs/sourceview5/"
repository = "https://github.com/bilelmoussaoui/sourceview5-rs/"

[dependencies]
bitflags = "1.2"
glib = {git = "https://github.com/gtk-rs/glib"}
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/sys"
package = "gtk4-sys"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/sys"
package = "gdk4-sys"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk4"
package = "gtk4"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gdk4"
package = "gdk4"

[dependencies.pango]
git = "https://github.com/gtk-rs/pango"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gdk-pixbuf"

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"

[dependencies.sourceview5-sys]
path = "../sourceview5-sys"

[features]
default = ["v5_0"]
v5_0 = ["sourceview5-sys/v5_0"]