[package]
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2018"
name = "sourceview5"
version = "0.1.0"
documentation = "https://bilelmoussaoui.github.io/sourceview5-rs/sourceview5/"
repository = "https://github.com/bilelmoussaoui/sourceview5-rs/"
license = "MIT"

[dependencies]
bitflags = "1.2"
glib = { git = "https://github.com/gtk-rs/gtk-rs"}
libc = "0.2"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk4-rs"
package = "gtk4"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk4-rs"
package = "gdk4"

[dependencies.pango]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.ffi]
package = "sourceview5-sys"
path = "./sys"

[features]
default = ["v5_0"]
v5_0 = ["ffi/v5_0"]
